[package]
name = "web_kvm"
version = "1.0.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
edition = "2018"

[dependencies]
warp = "0.2.5"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
tokio = { version = "0.2", features = ["full"] }
confy = "0.4.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"